Fix overflow

--- a/app/assets/styles/base/_core.scss
+++ b/app/assets/styles/base/_core.scss
@@ -3,11 +3,6 @@
     box-sizing: border-box;
 }
 
-html, body {
-    overflow-x: hidden;
-    max-width: 100vw;
-}
-
 html {
     height: 100%;
     width: 100%;
